hphp/hack/test/typecheck/ppl/implements_inheritance2.php.exp
File "implements_inheritance2.php", line 9, characters 7-16:
a class must be annotated with <<__PPL>> to implement <<__PPL>> interface: BaseInterface (Typing[4257])
File "implements_inheritance2.php", line 6, characters 11-23:
Declaration is here
