hphp/hack/test/typecheck/ppl/implements_inheritance2.php
<?hh // strict

// A ppl interface can only be implemented by ppl classes

<<__PPL>>
interface BaseInterface {
}

class ChildClass implements BaseInterface {
}
